# exot_eengine

./: .gitconfig  .gitignore  .gitmessage  .pre-commit-config.yaml  pyproject.toml  setup.cfg
configurations/: .gitignore  flush+flush-cc_interference.toml  flush+flush-cc_performance.toml  flush+prefetch-cc_interference.toml  flush+prefetch-cc_performance.toml  flush+reload-cc_interference.toml  flush+reload-cc_performance.toml  frequency-cc_performance.toml  power-cc_interference_h5.toml  power-cc_interference_h9.toml  power-cc_interference_nose.toml  power-cc_performance_h5.toml  power-cc_performance_h9.toml  power-cc_performance_nose.toml  template.toml  template_app_exec.toml  template_ttb.toml  thermal-cc_all_temperatures.toml  thermal-cc_capacity.toml  thermal-cc_interference.toml  thermal-cc_interference_amend.toml  thermal-cc_jitter_nopin_nort.toml  thermal-cc_jitter_nopin_rt.toml  thermal-cc_jitter_pin_nort.toml  thermal-cc_jitter_pin_rt.toml  thermal-cc_performance.toml  thermal-cc_performance_all_cores.toml  thermal-cc_performance_autofan.toml  thermal-cc_performance_dvfs.toml  thermal-cc_performance_masti.toml  thermal-cc_performance_nopinning.toml  thermal-cc_performance_nort.toml  thermal-sc_augmentation_parameters.toml  thermal-sc_benchmarks.toml  thermal-sc_dragonboard_imitation.toml  thermal-sc_final.toml  thermal-sc_repetitouch.toml
configurations/examples/: cache_flush+flush_performance.toml  demo_app_exec_experiment.toml  demo_app_exec_experiment_ttb.toml  demo_exploratory_experiment.toml  demo_frequency_sweep_experiment.toml  demo_performance_experiment.toml  demo_performance_experiment_with_interference.toml  thermal-cc_exploratory.toml  thermal-cc_performance.toml  thermal-cc_sweep_capacity.toml
configurations/examples/RepetiTouch/: Samsung_Galaxy_S5_SM-900H_AnTuTu.rpt  Samsung_Galaxy_S5_SM-900H_Dropbox.rpt  Sony_Xperia_Z5_AnTuTu.rpt  Sony_Xperia_Z5_Dropbox.rpt
data/: .gitignore
environments/: .gitignore  ARMv7.toml  ARMv8.toml  Aman_Manwe_Bilbo.toml  Aman_Manwe_Frodo.toml  Bilbo.toml  Frodo.toml  Gandalf.toml  Haswell.toml  Haswell_3.toml  Manwe.toml  Merry.toml  Pallando.toml  Pippin.toml  S5.toml  Sam.toml  Sandy.toml  Saruman.toml  Z5.toml  template.toml
exot/: __init__.py  __version__.py
exot/channel/: __init__.py  _base.py  covertchannels.py  sidechannels.py
exot/channel/mixins/: __init__.py  (+2 more)
exot/driver/: __init__.py  _backend.py  _driver.py  _extensions.py  _factory.py  _mixins.py  _process.py  adb.py  android.py  backend_adb.py  backend_ssh.py  driver_android.py  driver_unix.py  ssh.py  unix.py
exot/exceptions/: __init__.py  _factory.py
exot/experiment/: __init__.py  _base.py  _factory.py  _mixins.py  app_exec.py  exploratory.py  frequency_sweep.py  performance.py
exot/layer/: __init__.py  _base.py  _factory.py  _mixins.py
exot/plotting/: _base.py  experiment_plotter.py  run_plotter.py
exot/util/: __init__.py  analysers.py  android.py  attributedict.py  capacity.py  debug.py  decorators.py  factory.py  file.py  git.py  logging.py  misc.py  mixins.py  plotting.py  prompts.py  scinum.py  timeout.py  wrangle.py
misc/: combine_experiments.sh  paramiko.patch  start_jupyter_server.sh  ttb_phase_temp_time.sh  update_license.sh
misc/char_freqinfo_meter/: .gitattributes  char_freqinfo_meter.sh  freqinfo-meter_installers.tar.xz  freqinfo_meter.tar.xz
misc/repetitouch/: README.md  parser.py
notebooks/: .gitignore  cache-cc_capacity.ipynb  executor_armv7.ipynb  executor_armv8.ipynb  executor_haswell.ipynb  executor_haswell_2.ipynb  executor_haswell_3.ipynb  executor_sandy.ipynb  flush+flush-cc_interference.ipynb  flush+flush-cc_performance.ipynb  flush+prefetch-cc_interference.ipynb  flush+prefetch-cc_performance.ipynb  flush+reload-cc_interference.ipynb  flush+reload-cc_performance.ipynb  power-cc_interference_h5.ipynb  power-cc_interference_h9.ipynb  power-cc_interference_nose.ipynb  power-cc_performance_h5.ipynb  power-cc_performance_h9.ipynb  power-cc_performance_nose.ipynb  template_data.arton.sh  template_proc.arton.sh  thermal-cc_all_temperatures.ipynb  thermal-cc_capacity.ipynb  thermal-cc_interference.ipynb  thermal-cc_interference_amend.ipynb  thermal-cc_jitter.ipynb  thermal-cc_performance-debug.ipynb  thermal-cc_performance.ipynb  thermal-cc_performance_all_cores.ipynb  thermal-cc_performance_autofan.ipynb  thermal-cc_performance_dvfs.ipynb  thermal-cc_performance_masti.ipynb  thermal-cc_performance_nopinning.ipynb  thermal-cc_performance_nort.ipynb  thermal-sc_augmentation_parameters.ipynb  thermal-sc_execute_analysis.arton.py  thermal-sc_execute_analysis.py  thermal-sc_generate_experiment.py  thermal-sc_move_arton_logs.sh
notebooks/examples/: Demo_Exploratory_Thermal-CC.ipynb  Demo_FrequencySweep_Capacity_Thermal-CC.ipynb  Demo_Performance_Cache_Flush+Flush.ipynb  Demo_Performance_Thermal-CC.ipynb  backend.ipynb  demo_app_exec_experiment.ipynb  demo_exploratory_experiment.ipynb  demo_frequency_sweep_experiment.ipynb  demo_performance_experiment_with_interference.ipynb  driver.ipynb  driver_backend.ipynb  generic_line_coding.ipynb  layer_lne.ipynb
scripts/: setup-hugetlbfs.service  setup-hugetlbfs.sh  setup-shm-arm.service  setup-shm-arm.sh
(+38 files in other folders)
