# Copyright (c) 2015-2020, Swiss Federal Institute of Technology (ETH Zurich)
# All rights reserved.
# 
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
# 
# * Redistributions of source code must retain the above copyright notice, this
#   list of conditions and the following disclaimer.
# 
# * Redistributions in binary form must reproduce the above copyright notice,
#   this list of conditions and the following disclaimer in the documentation
#   and/or other materials provided with the distribution.
# 
# * Neither the name of the copyright holder nor the names of its
#   contributors may be used to endorse or promote products derived from
#   this software without specific prior written permission.
# 
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
# 
[tool.poetry]
name = "exot"
version = "1.0.0-alpha"
description = "Data processing framework for side- and covert-channel evaluation"
authors = [
    "Bruno Klopott <klopottb@student.ethz.ch>",
    "Philipp Miedl <philipp.miedl@tik.ee.ethz.ch>"
]

[tool.poetry.dependencies]
# Core
python = "^3.7"
toml = "^0.10"
pip = "^19.2"

# Scientific, numeric, & visualisation
bitarray = "^0.8.3"
editdistance = "^0.5.3"
matplotlib = "^3.0"
numpy = "^1.16"
pandas = "^0.24.1"
pyfftw = "^0.11.1"
six = "^1.12"
scikit-learn = "^0.21"
scipy = "^1.4"
seaborn = "^0.9.0"
statsmodels = "^0.9.0"

# Serialising and communcations
fabric = "^2.4"
invoke = "^1.2"
pyyaml = "^3.13"
tables = "^3.5"
numba = "^0.43.1"

# Utilities
coloredlogs = "^10.0"
fastdtw = "^0.3.4"
future = "^0.17.1"
mock = "^3.0"
wheel = "^0.33.6"
setuptools = "^41.2"

# Optional dependencies
tensorboard         = {version = "^2.0",   optional = true} 
tensorflow-gpu      = {version = "^2.0",   optional = true} 
tensorflow_addons   = {version = "*",      optional = true} 
tensorflow          = {version = "^2.0",   optional = true} 
scikit-cuda         = {version = "^0.5.3", optional = true} 
imbalanced-learn    = {version = "^0.5.0", optional = true} 
keras               = {version = "^2.3",   optional = true} 
keras_applications  = {version = "=1.0.8", optional = true}  
keras_preprocessing = {version = "=1.0.8", optional = true} 
mpld3 = "^0.3.0"
lttb = "^0.2.2"

[tool.poetry.dev-dependencies]
# Interactive
ipython = "^7.2"
ipykernel = "^5.1"
jupyter = "^1.0"
jupyter_contrib_nbextensions = "^0.5.1"
jupyter-nbextensions-configurator = "^0.4.1"
widgetsnbextension = "^3.5.0"
jupyterlab = "^0.35.6"

# Formatting & checks
black = "19.3b0"
flake8 = "^3.7"
isort = "^4.3"
mypy = "^0.670.0"

# Repository
pre-commit = "^1.14"

[tool.poetry.extras]
tf      = ["tensorboard", "tensorflow_addons", "imbalanced_learn", "keras", "keras_applicaitons", "keras_preprocessing",                "tensorflow"]
tf_gpu  = ["tensorboard", "tensorflow_addons", "imbalanced_learn", "keras", "keras_applicaitons", "keras_preprocessing", "scikit-cuda", "tensorflow-gpu" ]

[tool.black]
line-length = 96
target_version = ['py37']
include = '\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
