[tool.poetry]
name = "exot"
version = "1.0.0-alpha"
description = "Data processing framework for side- and covert-channel evaluation"
authors = [
    "Bruno Klopott <klopottb@student.ethz.ch>",
    "Philipp Miedl <philipp.miedl@tik.ee.ethz.ch>"
]

[tool.poetry.dependencies]
# Core
python = "^3.7"
toml = "^0.10"

# Scientific, numeric, & visualisation
bitarray = "^0.8.3"
matplotlib = "^3.0"
numpy = "^1.16"
pandas = "^0.24.1"
pyfftw = "^0.11.1"
scikit-learn = "^0.20.3"
scipy = "^1.2"
seaborn = "^0.9.0"
statsmodels = "^0.9.0"

# Serialising and communcations
fabric = "^2.4"
invoke = "^1.2"
pyyaml = "^3.13"
tables = "^3.5"
numba = "^0.43.1"

# Utilities
coloredlogs = "^10.0"

[tool.poetry.dev-dependencies]
# Interactive
ipython = "^7.2"
ipykernel = "^5.1"
jupyter = "^1.0"
jupyter_contrib_nbextensions = "^0.5.1"
jupyter-nbextensions-configurator = "^0.4.1"
widgetsnbextension = "^3.5.0"
jupyterlab = "^0.35.6"

# Formatting & checks
black = "19.3b0"
flake8 = "^3.7"
isort = "^4.3"
mypy = "^0.670.0"

# Repository
pre-commit = "^1.14"

[tool.black]
line-length = 96
target_version = ['py37']
include = '\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
